Transform from prescriptive diagnostics to investigative infrastructure
- Implement Green Tree Restaurant principle: create conditions for discovery
- Replace string outputs with on-node visual displays using addDOMWidget()
- Add retrotech aesthetics: ASCII histograms, phosphor glow, terminal readouts
- Create flexible investigation modes (tensor, temporal, patterns)
- Fix security vulnerabilities: input sanitization, workflow isolation, memory cleanup
- Enable temporal tracking for FOUC-type frame-by-frame analysis

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,2 @@
-matplotlib>=3.10.0
+# No additional requirements - uses only standard library and ComfyUI built-ins
+# numpy and torch are provided by ComfyUI
